# cosmoswasm-canister-demo

./: .gitignore  README.md  cosmos_canister_demo.wasm  dfx.json  install_canister.sh  schnorr_canister.wasm
cosmos_canister_demo/: Cargo.toml
cosmos_canister_demo/src/: cosmos_client.rs  error.rs  lib.rs  main.rs  schnorr.rs  state.rs  utils.rs
cosmos_canister_demo/tests/: test.rs
schnorr_canister/src/: lib.rs
