[package]
name = "cosmos_canister_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.6"
ciborium = "0.2.1"
ic-cdk = "0.13.1"
ic-cdk-macros = "0.8.3"
log = "0.4"
thiserror = "1"
anyhow = "1.0.80"

serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["std"] }

ic0 = "0.18.9"
ic-cdk-timers = "0.7.0"
num-traits = "0.2.17"

ic-log = { git = "https://github.com/octopus-network/canister-sdk.git", branch = "v0.12.x-stablelog" }

hex = "0.4.3"

cosmrs = {version = "0.17.0", features = ["cosmwasm"]}
cosmwasm-schema = "2.0.1"

base64 = "0.22.1"
rand = "0.8.5"
uuid = "1.10.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1.40"
cosmrs = {version = "0.17.0", features = ["dev", "cosmwasm"]}